--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <hr />
       <div align='center'>
         <small>
-          [<a href="../rss.xml">subscribe</a>|<a href="./2021.html">rolling</a
+          [<a href="../rss.xml">subscribe</a>|<a href="./rolling.html">rolling</a
           >]
         </small>
         </div>
