Update index.html meta tags

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <html>
   <head>
     <title>Blog</title>
-    <meta name="description" content="Tanish | Blog">
+    <meta name="description" content="Blog Index">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="Blog">
-    <meta property="og:url" content="https://tanish2002.is-a.dev/blog/blogindex">
-    <meta property="og:title" content="Tanish | Blog">
-    <meta property="og:description" content="Tanish | Blog">
-    <meta property="og:image" content="https://tanish2002.is-a.dev/Screenshot.png">
+    <meta property="og:url" content="https://blog.bakaotaku.dev">
+    <meta property="og:title" content="Blog Index">
+    <meta property="og:description" content="Blog Index">
+    <meta property="og:image" content="https://blog.bakaotaku.dev/preview.png">
   
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://tanish2002.is-a.dev/blog/blogindex">
-    <meta property="twitter:title" content="Tanish | Blog">
-    <meta property="twitter:description" content="Tanish | Blog">
-    <meta property="twitter:image" content="https://tanish2002.is-a.dev/Screenshot.png">
+    <meta property="twitter:url" content="https://blog.bakaotaku.dev">
+    <meta property="twitter:title" content="Blog Index">
+    <meta property="twitter:description" content="Blog Index">
+    <meta property="twitter:image" content="https://blog.bakaotaku.dev/preview.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=0.5" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
