--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <ul id="links">
       <!-- LB -->
+<li><a href="posts/a-homelab-appeared.html">A HomeLab Appeared!</a></li>
 <li><a href="posts/i-switched-to-nixos.html">I switched to NixOS</a></li>
 <li><a href="posts/why-linux.html">Why Linux?</a></li>
 <li><a href="posts/starting-a-blog.html">Starting a Blog</a></li>
